--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@react-three/drei": "^9.117.0",
     "@react-three/fiber": "^8.17.10",
     "clsx": "^2.1.1",
+    "firebase": "^12.7.0",
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.460.0",
     "maath": "^0.10.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
+    "react-router-dom": "^7.11.0",
     "tailwind-merge": "^2.5.4",
     "three": "^0.170.0"
   },
